--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "google-api-python-client>=2.189.0",
     "lxml>=6.0.2",
+    "matplotlib>=3.10.8",
     "pandas>=3.0.0",
     "pillow>=12.1.0",
+    "plotly>=6.5.2",
     "requests>=2.32.5",
     "torch>=2.10.0",
     "torchvision>=0.25.0",
