--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "drissionpage>=4.1.1.2",
     "google-api-python-client>=2.189.0",
+    "ipykernel>=7.2.0",
     "lxml>=6.0.2",
     "matplotlib>=3.10.8",
+    "nbformat>=5.10.4",
     "pandas>=3.0.0",
     "pillow>=12.1.0",
     "plotly>=6.5.2",
