--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "drissionpage>=4.1.1.2",
     "google-api-python-client>=2.189.0",
+    "importlib>=1.0.4",
     "ipykernel>=7.2.0",
     "lxml>=6.0.2",
     "matplotlib>=3.10.8",
