--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipykernel>=7.2.0",
     "lxml>=6.0.2",
     "matplotlib>=3.10.8",
+    "minio>=7.2.20",
     "nbformat>=5.10.4",
     "pandas>=3.0.0",
     "pillow>=12.1.0",
