--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pillow>=12.1.0",
     "plotly>=6.5.2",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
     "stem>=1.8.2",
     "torch>=2.10.0",
     "torchvision>=0.25.0",
