--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "pillow>=12.1.0",
     "plotly>=6.5.2",
     "requests>=2.32.5",
+    "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "sentence-transformers>=5.2.3",
     "stem>=1.8.2",
     "torch>=2.10.0",
     "torchvision>=0.25.0",
