--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pandas>=3.0.0",
     "pillow>=12.1.0",
     "plotly>=6.5.2",
+    "pyarrow>=23.0.1",
     "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
